<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/patientFragment"
        android:title="@string/patient_bottom_nav_documents_text"
        android:icon="@drawable/ic_baseline_home" />

    <item
        android:id="@+id/patientCalendarFragment"
        android:title="@string/patient_bottom_nav_calendar_text"
        android:icon="@drawable/ic_baseline_calendar" />

    <item
        android:id="@+id/vaccinationQRCodeFragment"
        android:title="@string/patient_bottom_nav_qr_code_text"
        android:icon="@drawable/ic_baseline_qr_code" />

    <item
        android:id="@+id/mainActivity"
        android:title="@string/patient_bottom_nav_logout_text"
        android:icon="@drawable/ic_baseline_logout" />

</menu>